k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shashti-karz
  labels:
    app.kubernetes.io/name: shashti-karz
    environment: production
